add marker info

--- a/conda.yml
+++ b/conda.yml
@@ -14,8 +14,10 @@ dependencies:
   - fastp
   - megahit
   - multiqc
+  - pigz
   - sra-tools
   - gzip
+  - gtdbtk
   - pip:
     - carveme
     - memote
